Fix padding on mobile header

--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -15,7 +15,7 @@
   &__header {
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    padding: 0 16px 16px 16px;
 
     @include tablet {
       padding: 32px 32px 24px 32px;
@@ -27,7 +27,7 @@
 
   &__title {
     color: $instock-black;
-    padding: 24px 0 16px 0;
+    padding: 32px 0 16px 0;
 
     @include tablet {
       padding: 0;
